rm twitter feeds

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <link rel="shortcut icon" href="https://res.cloudinary.com/iambeejayayo/image/upload/v1547954566/fav-500.png">
 
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/app.min.css">
 
 </head>
 
@@ -660,7 +660,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-2 col-sm-4">
+                <div class="col-md-3 col-sm-4">
                     <div class="footer-thumb">
                         <h2>Quick Links</h2>
                         <ul class="footer-link">
@@ -672,20 +672,10 @@
                     </div>
                 </div>
 
-                <div class="col-md-3 col-sm-4">
+                <div class="col-md-4 col-sm-4">
                     <div class="footer-thumb">
                         <a href="https://certification.templatemonster.com" target="_blank" rel="noopener"><img src="images/certified.png"
                                 class="img-responsive center certified" alt="TemplateMonster Certified Partner Badge"></a>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-4">
-                    <div class="footer-thumb">
-                        <div class="twitter-feed">
-                            <a class="twitter-timeline" js.async=true; data-link-color="#19CF86" data-width="300"
-                                data-height="300" data-chrome="nofooter" href="https://twitter.com/iambolajiayo?ref_src=twsrc%5Etfw">Tweets
-                                by iambolajiayo</a>
-                            </ul>
-                        </div>
                     </div>
                 </div>
 
