update image path

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                 <div class="col-md-4 col-sm-12 ">
                     <div>
-                        <img src="https://res.cloudinary.com/iambeejayayo/image/upload/v1547954566/fav-500.png" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
+                        <img src="images/bolaji.jpg" class="img-responsive center about-image " alt="Bolaji Ayodeji ">
                         <br /><br /><br /><br /><br /><br /><br /><br />
                     </div>
                 </div>
