--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <meta name="author" content="BOLAJI AYODEJI">
     <meta property="og:url" content="https://bolajiayodeji.com/" />
     <meta property="og:site_name" content="⚡️️BOLAJI AYODEJI⚡️️" />
-    <meta property="og:type" content="Portfolio Website" />
+    <meta property="og:type" content="website" />
 
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -327,8 +327,8 @@
                         <div class="media-body blog-info ">
                             <img src="images/serv/blog-image8.png " class="img-responsive " alt=" "></a>
                             <h3>Search Engine Optimization</a></h3>
-                            <p>There's a lot of competition out there, so we ensure to include correct meta tagging &
-                                descriptions, open graphs and provide SEO training and strategy for each of our clients
+                            <p>There's a lot of competition out there, so I ensure to include correct meta tagging &
+                                descriptions, open graphs and provide SEO training and strategy for each of my clients
                                 to ensure continous traffic count..</p>
                         </div>
                     </div>
